correction des class

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta name="description" content="site Reservia">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Reservia</title>
-        <link href="CSS/desktop.css" rel="stylesheet">
-        <link href="CSS/mobile.css" rel="stylesheet" media="screen and (max-width:400px)">
-        <link href="CSS/tablette.css" rel="stylesheet">
+        <link href="css/desktop.css" rel="stylesheet">
+        <link href="css/mobile.css" rel="stylesheet" media="screen and (max-width:400px)">
+        <link href="css/tablette.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/f46add157b.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -16,13 +16,13 @@
                     <img src="images/logo/Reservia@3x.png" alt="logo de Reservia">
                 </div>
             <nav class="header-nav">
-                <div class="onglets">
+                <div class="tabs">
                     <ul>
-                        <li><a href="#hebergements">Hébergements</a></li>
-                        <li><a href="#activites">Activités</a></li>
+                        <li><a href="#lodging">Hébergements</a></li>
+                        <li><a href="#activities">Activités</a></li>
                     </ul>
                 </div>
-                <div class="inscription">
+                <div class="register">
                     <ul>
                         <li>S'inscrire</li>
                     </ul>
@@ -31,7 +31,7 @@
         </header>
         <main>
         <section>
-            <div class="txt-filtres">
+            <div class="filters-head">
                 <h3>Trouvez votre hébergement pour des vacances de rêve</h3>
                 <p>En plein centre ville ou en pleine nature</p>
             </div>
@@ -44,29 +44,29 @@
                 </div>
                 </form>
             </div>
-            <div class="filtres">
+            <div class="filters">
                 <p>Filtres</p>
-                <div class="filtres-box">
+                <div class="filters-box">
                     <i class="fas fa-money-bill-wave blue"></i>
-                    <div class="filtres-choice">
+                    <div class="filters-choice">
                         <p>Économique</p>
                     </div>
                 </div>
-                <div class="filtres-box">
+                <div class="filters-box">
                     <i class="fas fa-child blue"></i>
-                    <div class="filtres-choice">
+                    <div class="filters-choice">
                         <p>Familial</p>
                     </div>
                 </div>
-                <div class="filtres-box">
+                <div class="filters-box">
                     <i class="fas fa-heart blue"></i>
-                    <div class="filtres-choice">
+                    <div class="filters-choice">
                         <p>Romantique</p>
                     </div>
                 </div> 
-                <div class="filtres-box">
+                <div class="filters-box">
                     <i class="fas fa-dog blue"></i>
-                    <div class="filtres-choice">
+                    <div class="filters-choice">
                         <p>Animaux autorisés</p>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
         </section>
         <section>
             <article>
-                <h2 id="hebergements">Hébergements à Marseille</h2>
+                <h2 id="lodging">Hébergements à Marseille</h2>
                 <div>
                     <a>
                         <div>
@@ -171,7 +171,7 @@
             </article>
         </section>
         <section>
-            <h2 id="activites">Activités à Marseille</h2>
+            <h2 id="activities">Activités à Marseille</h2>
             <div>
                 <a>
                     <div>
