[UPDATE] Responsive mobile avant hébergements

--- a/index.html
+++ b/index.html
@@ -45,29 +45,33 @@
                 </form>
             </div>
             <div class="filters">
-                <p>Filtres</p>
-                <div class="filters-box">
-                    <i class="fas fa-money-bill-wave blue"></i>
-                    <div class="filters-choice">
-                        <p>Économique</p>
-                    </div>
+                <div class="p-filters">
+                    <p>Filtres</p>
                 </div>
-                <div class="filters-box">
-                    <i class="fas fa-child blue"></i>
-                    <div class="filters-choice">
-                        <p>Familial</p>
+                <div class="filters-ctg">
+                    <div class="filters-box">
+                        <i class="fas fa-money-bill-wave blue"></i>
+                        <div class="filters-choice">
+                            <p>Économique</p>
+                        </div>
                     </div>
-                </div>
-                <div class="filters-box">
-                    <i class="fas fa-heart blue"></i>
-                    <div class="filters-choice">
-                        <p>Romantique</p>
+                    <div class="filters-box">
+                        <i class="fas fa-child blue"></i>
+                        <div class="filters-choice">
+                            <p>Familial</p>
+                        </div>
                     </div>
-                </div> 
-                <div class="filters-box">
-                    <i class="fas fa-dog blue"></i>
-                    <div class="filters-choice">
-                        <p>Animaux autorisés</p>
+                    <div class="filters-box">
+                        <i class="fas fa-heart blue"></i>
+                        <div class="filters-choice">
+                            <p>Romantique</p>
+                        </div>
+                    </div> 
+                    <div class="filters-box">
+                        <i class="fas fa-dog blue"></i>
+                        <div class="filters-choice">
+                            <p>Animaux autorisés</p>
+                        </div>
                     </div>
                 </div>
             </div>
