--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
         <meta name="description" content="site Reservia">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Reservia</title>
+        <link rel="preload" href="Raleway-Thin.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="preload" href="Raleway-Bold.woff2" as="font" type="font/woff2" crossorigin>
         <link href="css/desktop.css" rel="stylesheet">
-        <link href="css/mobile.css" rel="stylesheet" media="screen and (max-width:400px)">
-        <link href="css/tablette.css" rel="stylesheet">
+        <link href="css/mobile.css" rel="stylesheet" media="screen and (max-width: 510px)">
+        <link href="css/tablette.css" rel="stylesheet" media="screen and (max-width: 850px)">
         <script src="https://kit.fontawesome.com/f46add157b.js" crossorigin="anonymous"></script>
     </head>
     <body>
