--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <nav class="header-nav">
                 <div class="tabs">
                     <ul>
-                        <li><a href="#lodging">Hébergements</a></li>
-                        <li><a href="#activities">Activités</a></li>
+                        <li id="lodging-tab"><a href="#lodging">Hébergements</a></li>
+                        <li id="activities-tab"><a href="#activities">Activités</a></li>
                     </ul>
                 </div>
                 <div class="register">
@@ -82,95 +82,101 @@
                 <p>Plus de 500 logements sont disponibles dans cette ville</p>
             </div>
         </section>
-        <section>
-            <article>
+        <section class="results">
+            <article class="lodging-section">
                 <h2 id="lodging">Hébergements à Marseille</h2>
-                <div>
-                    <a>
-                        <div>
-                            <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="chambre de l'auberge la Cannebière">
-                            <h4>Auberge la Cannebière</h4>
-                            <p>Nuit à partir de 25€</p>
-                            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                <div class="m-lodging">
+                    <a href="pages/lacannebiere.html" target="_blank">
+                        <div class="lodging-box">
+                            <img src="images/hebergements/4_small_bis/auberge-la-cannebiere.jpg" alt="chambre de l'auberge la Cannebière">
+                            <div class="lodging-box-info">
+                                <h4>Auberge la Cannebière</h4>
+                                <p>Nuit à partir de 25€</p>
+                                <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star grey"></i>
+                            </div>
                         </div>
                     </a>
-                    <a>   
-                        <div>
-                            <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre de l'hôtel du port">
-                            <h4>Hôtel du port</h4>
-                            <p>Nuit à partir de 52€</p>
-                            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                    <a href="pages/hotelduport.html" target="_blank">   
+                        <div class="lodging-box">
+                            <img src="images/hebergements/4_small_bis/hotel-du-port.jpg" alt="chambre de l'hôtel du port">
+                            <div class="lodging-box-info">
+                                <h4>Hôtel du port</h4>
+                                <p>Nuit à partir de 52€</p>
+                                <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i>
+                            </div>
                         </div>
                     </a>
-                    <a>
-                        <div>
-                            <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre de l'hôtel les mouettes">
-                            <h4>Hôtel Les mouettes</h4>
-                            <p>Nuit à partir de 76€</p>
-                            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                    <a href="pages/lesmouettes.html" target="_blank">
+                        <div class="lodging-box">
+                            <img src="images/hebergements/4_small_bis/hotel-les-mouettes.jpg" alt="chambre de l'hôtel les mouettes">
+                            <div class="lodging-box-info">
+                                <h4>Hôtel Les mouettes</h4>
+                                <p>Nuit à partir de 76€</p>
+                                <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star grey"></i>
+                            </div>
                         </div>
                     </a>
-                    <a>
-                        <div>
-                            <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre de l'hôtel de la mer">
-                            <h4>Hôtel de la mer</h4>
-                            <p>Nuit à partir de 46€</p>
-                            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                    <a href="pages/hoteldelamer.html" target="_blank">
+                        <div class="lodging-box">
+                            <img src="images/hebergements/4_small_bis/hotel-de-la-mer.jpg" alt="chambre de l'hôtel de la mer">
+                            <div class="lodging-box-info">
+                                <h4>Hôtel de la mer</h4>
+                                <p>Nuit à partir de 46€</p>
+                                <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star grey"></i><i class="fas fa-star grey"></i>
+                            </div>
                         </div>
                     </a>
-                    <a>
-                        <div>
-                            <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre de l'auberge le panier">
-                            <h4>Auberge Le Panier</h4>
-                            <p>Nuit à partir de 23€</p>
-                            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                    <a href="pages/lepanier.html" target="_blank">
+                        <div class="lodging-box">
+                            <img src="images/hebergements/4_small_bis/auberge-le-panier.jpg" alt="chambre de l'auberge le panier">
+                            <div class="lodging-box-info">
+                                <h4>Auberge Le Panier</h4>
+                                <p>Nuit à partir de 23€</p>
+                                <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star grey"></i>
+                            </div>
                         </div>
                     </a>
-                    <a>
-                        <div>
-                            <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre de l'hôtel chez Amina">
-                            <h4>Hôtel chez Amina</h4>
-                            <p>Nuit à partir de 96€</p>
-                            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                    <a href="pages/hotelchezamina.html" target="_blank">
+                        <div class="lodging-box">
+                            <img src="images/hebergements/4_small_bis/hotel-chez-amina.jpg" alt="chambre de l'hôtel chez Amina">
+                            <div class="lodging-box-info">
+                                <h4>Hôtel chez Amina</h4>
+                                <p>Nuit à partir de 96€</p>
+                                <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i>
+                            </div>
                         </div>
                     </a>
                 </div>
                 <p>Afficher plus</p>
             </article>
-            <article>
-                <div>
+            <article class="popular-section">
+                <div class="popular-head">
                     <h3>Les plus populaires</h3>
                     <i class="fas fa-chart-line"></i>
                 </div>
-                <div>
-                    <a>
-                        <div>
-                            <div>
-                                <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="chambre de l'hôtel le soleil du matin">
-                                <h4>Hôtel Le soleil du matin</h4>
-                                <p>Nuit à partir de 128€</p>
-                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-                            </div>
+                <div class="m-popular">
+                    <a href="pages/lesoleildumatin.html" target="_blank">
+                        <div class="popular-box">
+                            <img src="images/hebergements/4_small_bis/hotel-le-soleil-du-matin.jpg" alt="chambre de l'hôtel le soleil du matin">
+                            <h4>Hôtel Le soleil du matin</h4>
+                            <p>Nuit à partir de 128€</p>
+                            <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i>
                         </div>
                     </a>
-                    <a>
-                        <div>
-                            <div>
-                                <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre des chambres d'hôtes Au coeur de l'eau">
-                                <h4>Au coeur de l'eau Chambres d'hôtes</h4>
-                                <p>Nuit à partir de 71€</p>
-                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-                            </div>
+                    <a href="pages/aucoeurdeleau.html" target="_blank">
+                        <div class="popular-box">
+                            <img src="images/hebergements/4_small_bis/au-coeur-de-l-eau.jpg" alt="chambre des chambres d'hôtes Au coeur de l'eau">
+                            <h4>Au coeur de l'eau Chambres d'hôtes</h4>
+                            <p>Nuit à partir de 71€</p>
+                            <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star grey"></i>
                         </div>
                     </a>
-                    <a>
-                        <div>
-                            <div>
-                                <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="chambre de l'hôtel Tout bleu et blanc">
-                                <h4>Hôtel Tout bleu et blanc</h4>
-                                <p>Nuit à partir de 68€</p>
-                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-                            </div>
+                    <a href="pages/toutbleuetblanc.html" target="_blank">
+                        <div class="popular-box">
+                            <img src="images/hebergements/4_small_bis/hotel-tout-bleu-et-blanc.jpg" alt="chambre de l'hôtel Tout bleu et blanc">
+                            <h4>Hôtel Tout bleu et blanc</h4>
+                            <p>Nuit à partir de 68€</p>
+                            <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star grey"></i>
                         </div>
                     </a>
                 </div>
