--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="preload" href="Raleway-Thin.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" href="Raleway-Bold.woff2" as="font" type="font/woff2" crossorigin>
         <link href="css/desktop.css" rel="stylesheet">
-        <link href="css/mobile.css" rel="stylesheet" media="screen and (max-width: 510px)">
+        <link href="css/mobile.css" rel="stylesheet" media="screen and (max-width: 480px)">
         <link href="css/tablette.css" rel="stylesheet" media="screen and (max-width: 850px)">
         <script src="https://kit.fontawesome.com/f46add157b.js" crossorigin="anonymous"></script>
     </head>
@@ -32,7 +32,7 @@
             </nav>
         </header>
         <main>
-        <section>
+        <section class="search">
             <div class="filters-head">
                 <h3>Trouvez votre hébergement pour des vacances de rêve</h3>
                 <p>En plein centre ville ou en pleine nature</p>
@@ -88,60 +88,84 @@
                 <div class="m-lodging">
                     <a href="pages/lacannebiere.html" target="_blank">
                         <div class="lodging-box">
-                            <img src="images/hebergements/4_small/auberge-la-cannebiere.jpg" alt="chambre de l'auberge la Cannebière">
+                            <picture>
+                                <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/auberge-la-cannebiere-mobile.jpg">
+                                <source media="(min-width: 481px)" srcset="images/hebergements/4_small/auberge-la-cannebiere.jpg">
+                                <img src="images/hebergements/4_small/auberge-la-cannebiere.jpg" alt="chambre de l'auberge la Cannebière">
+                            </picture>
                             <div class="lodging-box-info">
                                 <h4>Auberge la Cannebière</h4>
-                                <p>Nuit à partir de 25€</p>
+                                <p>Nuit à partir de <span>25€</span></p>
                                 <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star grey"></i>
                             </div>
                         </div>
                     </a>
                     <a href="pages/hotelduport.html" target="_blank">   
                         <div class="lodging-box">
-                            <img src="images/hebergements/4_small/hotel-du-port.jpg" alt="chambre de l'hôtel du port">
+                            <picture>
+                                <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/hotel-du-port-mobile.jpg">
+                                <source media="(min-width: 481px)" srcset="images/hebergements/4_small/hotel-du-port.jpg">
+                                <img src="images/hebergements/4_small/hotel-du-port.jpg" alt="chambre de l'hôtel du Port de Marseille">
+                            </picture>
                             <div class="lodging-box-info">
                                 <h4>Hôtel du port</h4>
-                                <p>Nuit à partir de 52€</p>
+                                <p>Nuit à partir de <span>52€</span></p>
                                 <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i>
                             </div>
                         </div>
                     </a>
                     <a href="pages/lesmouettes.html" target="_blank">
                         <div class="lodging-box">
-                            <img src="images/hebergements/4_small/hotel-les-mouettes.jpg" alt="chambre de l'hôtel les mouettes">
+                            <picture>
+                                <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/hotel-les-mouettes-mobile.jpg">
+                                <source media="(min-width: 481px)" srcset="images/hebergements/4_small/hotel-les-mouettes.jpg">
+                                <img src="images/hebergements/4_small/hotel-les-mouettes.jpg" alt="chambre de l'hôtel Les mouettes">
+                            </picture>
                             <div class="lodging-box-info">
                                 <h4>Hôtel Les mouettes</h4>
-                                <p>Nuit à partir de 76€</p>
+                                <p>Nuit à partir de <span>76€</span></p>
                                 <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star grey"></i>
                             </div>
                         </div>
                     </a>
                     <a href="pages/hoteldelamer.html" target="_blank">
                         <div class="lodging-box">
-                            <img src="images/hebergements/4_small/hotel-de-la-mer.jpg" alt="chambre de l'hôtel de la mer">
+                            <picture>
+                                <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/hotel-de-la-mer-mobile.jpg">
+                                <source media="(min-width: 481px)" srcset="images/hebergements/4_small/hotel-de-la-mer.jpg">
+                                <img src="images/hebergements/4_small/hotel-de-la-mer.jpg" alt="chambre de l'hôtel de la mer">
+                            </picture>
                             <div class="lodging-box-info">
                                 <h4>Hôtel de la mer</h4>
-                                <p>Nuit à partir de 46€</p>
+                                <p>Nuit à partir de <span>46€</span></p>
                                 <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star grey"></i><i class="fas fa-star grey"></i>
                             </div>
                         </div>
                     </a>
                     <a href="pages/lepanier.html" target="_blank">
                         <div class="lodging-box">
-                            <img src="images/hebergements/4_small/auberge-le-panier.jpg" alt="chambre de l'auberge le panier">
+                            <picture>
+                                <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/auberge-le-panier-mobile.jpg">
+                                <source media="(min-width: 481px)" srcset="images/hebergements/4_small/auberge-le-panier.jpg">
+                                <img src="images/hebergements/4_small/auberge-le-panier.jpg" alt="chambre de l'auberge le Panier">
+                            </picture>
                             <div class="lodging-box-info">
                                 <h4>Auberge Le Panier</h4>
-                                <p>Nuit à partir de 23€</p>
+                                <p>Nuit à partir de <span>23€</span></p>
                                 <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star grey"></i>
                             </div>
                         </div>
                     </a>
                     <a href="pages/hotelchezamina.html" target="_blank">
                         <div class="lodging-box">
-                            <img src="images/hebergements/4_small/hotel-chez-amina.jpg" alt="chambre de l'hôtel chez Amina">
+                            <picture>
+                                <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/hotel-chez-amina-mobile.jpg">
+                                <source media="(min-width: 481px)" srcset="images/hebergements/4_small/hotel-chez-amina.jpg">
+                                <img src="images/hebergements/4_small/hotel-chez-amina.jpg" alt="chambre de l'hôtel chez Amina">
+                            </picture>
                             <div class="lodging-box-info">
                                 <h4>Hôtel chez Amina</h4>
-                                <p>Nuit à partir de 96€</p>
+                                <p>Nuit à partir de <span>96€</span></p>
                                 <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i>
                             </div>
                         </div>
@@ -159,7 +183,7 @@
                         <div class="popular-box">
                             <img src="images/hebergements/4_small/hotel-le-soleil-du-matin.jpg" alt="chambre de l'hôtel le soleil du matin">
                             <h4>Hôtel Le soleil du matin</h4>
-                            <p>Nuit à partir de 128€</p>
+                            <p>Nuit à partir de <span>128€</span></p>
                             <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i>
                         </div>
                     </a>
@@ -167,7 +191,7 @@
                         <div class="popular-box">
                             <img src="images/hebergements/4_small/au-coeur-de-l-eau.jpg" alt="chambre des chambres d'hôtes Au coeur de l'eau">
                             <h4>Au coeur de l'eau Chambres d'hôtes</h4>
-                            <p>Nuit à partir de 71€</p>
+                            <p>Nuit à partir de <span>71€</span></p>
                             <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star grey"></i>
                         </div>
                     </a>
@@ -175,7 +199,7 @@
                         <div class="popular-box">
                             <img src="images/hebergements/4_small/hotel-tout-bleu-et-blanc.jpg" alt="chambre de l'hôtel Tout bleu et blanc">
                             <h4>Hôtel Tout bleu et blanc</h4>
-                            <p>Nuit à partir de 68€</p>
+                            <p>Nuit à partir de <span>68€</span></p>
                             <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star grey"></i>
                         </div>
                     </a>
