update responsive tablette

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <link rel="preload" href="Raleway-Thin.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" href="Raleway-Bold.woff2" as="font" type="font/woff2" crossorigin>
         <link href="css/desktop.css" rel="stylesheet">
-        <link href="css/mobile.css" rel="stylesheet" media="screen and (max-width: 480px)">
-        <link href="css/tablette.css" rel="stylesheet" media="screen and (min-width: 481px) and (max-width: 850px)">
+        <link href="css/mobile.css" rel="stylesheet">
+        <link href="css/tablette.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/f46add157b.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -143,7 +143,7 @@
                         </div>
                     </a>
                     <a href="pages/lepanier.html" target="_blank">
-                        <div class="lodging-box">
+                        <div class="lodging-box" id="lepanier">
                             <picture>
                                 <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/auberge-le-panier-mobile.jpg">
                                 <source media="(min-width: 481px)" srcset="images/hebergements/4_small/auberge-le-panier.jpg">
@@ -157,7 +157,7 @@
                         </div>
                     </a>
                     <a href="pages/hotelchezamina.html" target="_blank">
-                        <div class="lodging-box">
+                        <div class="lodging-box" id="chezamina">
                             <picture>
                                 <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/hotel-chez-amina-mobile.jpg">
                                 <source media="(min-width: 481px)" srcset="images/hebergements/4_small/hotel-chez-amina.jpg">
