--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <article class="lodging-section">
                 <h2 id="lodging">Hébergements à Marseille</h2>
                 <div class="m-lodging">
-                    <a href="pages/lacannebiere.html" target="_blank">
+                    <a href="pages/hebergements/lacannebiere.html" target="_blank">
                         <div class="lodging-box">
                             <picture>
                                 <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/auberge-la-cannebiere-mobile.jpg">
@@ -100,7 +100,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="pages/hotelduport.html" target="_blank">   
+                    <a href="pages/hebergements/hotelduport.html" target="_blank">   
                         <div class="lodging-box">
                             <picture>
                                 <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/hotel-du-port-mobile.jpg">
@@ -114,7 +114,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="pages/lesmouettes.html" target="_blank">
+                    <a href="pages/hebergements/lesmouettes.html" target="_blank">
                         <div class="lodging-box">
                             <picture>
                                 <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/hotel-les-mouettes-mobile.jpg">
@@ -128,7 +128,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="pages/hoteldelamer.html" target="_blank">
+                    <a href="pages/hebergements/hoteldelamer.html" target="_blank">
                         <div class="lodging-box">
                             <picture>
                                 <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/hotel-de-la-mer-mobile.jpg">
@@ -142,7 +142,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="pages/lepanier.html" target="_blank">
+                    <a href="pages/hebergements/lepanier.html" target="_blank">
                         <div class="lodging-box" id="lepanier">
                             <picture>
                                 <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/auberge-le-panier-mobile.jpg">
@@ -156,7 +156,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="pages/hotelchezamina.html" target="_blank">
+                    <a href="pages/hebergements/hotelchezamina.html" target="_blank">
                         <div class="lodging-box" id="chezamina">
                             <picture>
                                 <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/hotel-chez-amina-mobile.jpg">
@@ -181,7 +181,7 @@
                     <i class="fas fa-chart-line"></i>
                 </div>
                 <div class="m-popular">
-                    <a href="pages/lesoleildumatin.html" target="_blank">
+                    <a href="pages/hebergements/lesoleildumatin.html" target="_blank">
                         <div class="popular-box">
                             <img src="images/hebergements/4_small/hotel-le-soleil-du-matin.jpg" alt="chambre de l'hôtel le soleil du matin">
                             <h4>Hôtel Le soleil du matin</h4>
@@ -189,7 +189,7 @@
                             <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i>
                         </div>
                     </a>
-                    <a href="pages/aucoeurdeleau.html" target="_blank">
+                    <a href="pages/hebergements/aucoeurdeleau.html" target="_blank">
                         <div class="popular-box">
                             <img src="images/hebergements/4_small/au-coeur-de-l-eau.jpg" alt="chambre des chambres d'hôtes Au coeur de l'eau">
                             <h4>Au coeur de l'eau Chambres d'hôtes</h4>
@@ -197,7 +197,7 @@
                             <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star grey"></i>
                         </div>
                     </a>
-                    <a href="pages/toutbleuetblanc.html" target="_blank">
+                    <a href="pages/hebergements/toutbleuetblanc.html" target="_blank">
                         <div class="popular-box">
                             <img src="images/hebergements/4_small/hotel-tout-bleu-et-blanc.jpg" alt="chambre de l'hôtel Tout bleu et blanc">
                             <h4>Hôtel Tout bleu et blanc</h4>
@@ -211,55 +211,55 @@
         <section>
             <h2 id="activities">Activités à Marseille</h2>
             <div class="activities-section">
-                <a>
-                    <div>
-                        <div>
-                            <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Image du vieux port de Marseille">
-                            <h4>Vieux Port</h4>
-                        </div>
+                <a href="pages/activites/vieuxport.html" target="_blank">
+                    <div class="activities-box">
+                        <source media="(max-width: 480px)" srcset="images/activites/4_small_mobile/vieux-port-mobile.jpg">
+                        <source media="(min-width: 481px)" srcset="images/activites/4_small/vieux-port.jpg">
+                        <img src="images/activites/4_small/vieux-port.jpg" alt="Image du vieux port de Marseille">
+                        <h4>Vieux Port</h4>
                     </div>
                 </a>
-                <div>
-                    <a>
-                        <div>
-                            <div>
-                                <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Image du Fort de Pomègues">
-                                <h4>Fort de Pomègues</h4>
-                            </div>
+                <div class="activities-m">
+                    <a href="pages/activites/fortdepomegues.html" target="_blank">
+                        <div class="activities-box">
+                            <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/fort-de-pomegues-mobile.jpg">
+                            <source media="(min-width: 481px)" srcset="images/hebergements/4_small/fort-de-pomegues.jpg">
+                            <img src="images/activites/4_small/fort-de-pomegues.jpg" alt="Image du Fort de Pomègues">
+                            <h4>Fort de Pomègues</h4>
                         </div>
                     </a>
-                    <a>
-                        <div>
-                            <div>
-                                <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Image des Îles du Frioul">
-                                <h4>Îles du Frioul</h4>
-                            </div>
+                    <a href="pages/activites/ilesdufrioul.html" target="_blank">
+                        <div class="activities-box">
+                            <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/iles-du-frioul-mobile.jpg">
+                            <source media="(min-width: 481px)" srcset="images/hebergements/4_small/iles-du-frioul.jpg">
+                            <img src="images/activites/4_small/iles-du-frioul.jpg" alt="Image des Îles du Frioul">
+                            <h4>Îles du Frioul</h4>
                         </div>
                     </a>
                 </div>
-                <a>
-                    <div>
-                        <div>
-                            <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Image du Parc National des Calanques">
-                            <h4>Parc National des Calanques</h4>
-                        </div>
+                <a href="pages/activites/parcnationaldescalanques.html" target="_blank">
+                    <div class="activities-box">
+                        <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/parc-national-des-calanques-mobile.jpg">
+                        <source media="(min-width: 481px)" srcset="images/hebergements/4_small/parc-national-des-calanques.jpg">
+                        <img src="images/activites/4_small/parc-national-des-calanques.jpg" alt="Image du Parc National des Calanques">
+                        <h4>Parc National des Calanques</h4>
                     </div>
                 </a>
-                <div>
-                    <a>
-                        <div>
-                            <div>
-                                <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Image de Notre-Dame-de-la-Garde">
-                                <h4>Notre-Dame-de-la-Garde</h4>
-                            </div>
+                <div class="activities-m">
+                    <a href="pages/activites/notredamedelagarde.html" target="_blank">
+                        <div class="activities-box">
+                            <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/notre-dame-de-la-garde-mobile.jpg">
+                            <source media="(min-width: 481px)" srcset="images/hebergements/4_small/notre-dame-de-la-garde.jpg">
+                            <img src="images/activites/4_small/notre-dame-de-la-garde.jpg" alt="Image de Notre-Dame-de-la-Garde">
+                            <h4>Notre-Dame-de-la-Garde</h4>
                         </div>
                     </a>
-                    <a>
-                        <div>
-                            <div>
-                                <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Image du Parc Longchamp">
-                                <h4>Parc Longchamp</h4>
-                            </div>
+                    <a href="pages/activites/parclongchamp.html" target="_blank">
+                        <div class="activities-box">
+                            <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/parc-longchamp-mobile.jpg">
+                            <source media="(min-width: 481px)" srcset="images/hebergements/4_small/parc-longchamp.jpg">
+                            <img src="images/activites/4_small/parc-longchamp.jpg" alt="Image du Parc Longchamp">
+                            <h4>Parc Longchamp</h4>
                         </div>
                     </a>
                 </div>
